Correction format de réponse JSON et refactorisation de FireAddressInfoService.